# BuildLoop

./: .env.example  .gitignore  00_EXECUTIVE_REFRAME.md  01_UPDATED_PRODUCT_ROADMAP.md  02_VALIDATED_WORKFLOW_AND_SYSTEM_BOUNDARIES.md  03_PASSPORT_DOMAIN_MODEL_AND_CANONICAL_SCHEMA.md  04_PASSPORT_MVP_SYSTEM_ARCHITECTURE.md  05_DATA_RELEVANCE_POLICY.md  06_IMPLEMENTATION_PLAN_BACKLOG_AND_AGENTS.md  07_HYBRID_STACK_DECISION_AND_DEPLOYMENT_ARCHITECTURE.md  08_AGENTIC_AI_FIRST_DEVELOPMENT_MODEL.md  09_MATERIAL_PASSPORT_CONSTRUCT_AND_HYBRID_WORKFLOW.md  10_SUPABASE_SCHEMA_SQL.sql  11_FASTAPI_API_CONTRACTS.md  12_CODEX_AGENT_TASK_CARDS.md  AGENTS.md  DECISIONS.md  DEVELOPMENT.md  DEV_MODE.md  PROGRESS.md  README.md  alembic.ini  buildloop_passport_from_address.py  buildloop_passport_from_address_colab_v3.py  pyproject.toml
app/: .env.example  AGENTS.md  Dockerfile  alembic.ini  conftest.py  main.py  pyproject.toml
app/alembic/: env.py
app/alembic/versions/: 20260503_0001_init_full_schema.py  734960e74be2_add_intake_requests_project_id_fk.py
app/api/routes/: health.py  intakes.py  parsing.py  passport_drafts.py  passport_pipeline.py  resolutions.py  sources.py
app/api/routes/tests/: conftest.py  test_passport_pipeline.py
app/core/: config.py  storage.py
app/db/: base.py  session.py
app/models/: __init__.py  building.py  buildings.py  condition_annotations.py  extraction_runs.py  intake_requests.py  listing_candidates.py  manual_edits.py  observations.py  passport_drafts.py  passport_versions.py  photo_assets.py  project.py  projects.py  resolver_runs.py  source_documents.py
app/schemas/: intake.py  observation.py  passport.py  passport_pipeline.py  resolution.py  source.py
app/services/intake/: service.py
app/services/passport_engine/: __init__.py  projection.py  quality.py  service.py  types.py
app/services/passport_engine/tests/: conftest.py  test_projection.py  test_quality.py  test_service.py
app/services/relevance_engine/: __init__.py  policy.py  service.py  types.py
app/services/relevance_engine/tests/: conftest.py  test_policy.py  test_service.py
app/services/resolver/: __init__.py  candidate_grouper.py  confidence.py  inads_adapter.py  normalizer.py  query_variants.py  service.py  types.py
app/services/resolver/tests/: conftest.py  test_candidate_grouper.py  test_confidence.py  test_normalizer.py  test_query_variants.py  test_service.py
app/services/source_ingestion/: __init__.py  dedup.py  ehr_fetcher.py  service.py  storage.py  types.py
app/services/source_ingestion/tests/: conftest.py  test_dedup.py  test_ehr_fetcher.py  (+1 more)
app/services/source_parsing/: __init__.py  page_map.py  service.py  storage.py  text_extractor.py  types.py
app/tests/: conftest.py  test_config.py  test_health.py  test_passport_pipeline.py
(+97 files in other folders)
