[project]
name = "buildloop-passport-engine"
version = "0.1.0"
description = "BUILDLoop passport engine backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.29.0",
  "alembic>=1.13.0",
  "pydantic-settings>=2.5.0",
  "supabase>=2.0.0",
  "python-multipart>=0.0.9",
  "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "factory-boy>=3.3.0",
  "httpx>=0.27.0",
  "mypy>=1.10.0",
  "ruff>=0.6.0",
]

# Tell setuptools to look one level up (the repo root) for Python packages.
# This makes `from app.core.config import ...` work when installed from app/.
[tool.setuptools.packages.find]
where = [".."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
# mypy_path points to repo root so `import app` resolves correctly
mypy_path = ".."

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
